# cems-protocol-review

./: .gitignore  2026R1_protocols.yaml  Makefile  README.md  config.py  extract.py  extract_prompt.txt  pyproject.toml  review.py  review_prompt.txt  split.py
docs/adr/: adr_template.md
docs/experiments/: exp_template.md
review/openai/gpt-4_1/: 2026R1_adult_airway.csv
scripts/: combine_csv.sh  extract_all.sh
text_protocol/: 2026R1_adult_abdpain.md  2026R1_adult_abdtrauma.md  2026R1_adult_acs.md  2026R1_adult_airway.md  2026R1_adult_alteredloc.md  2026R1_adult_arrest_bls.md  2026R1_adult_arrest_hypothermic.md  2026R1_adult_arrest_trauma.md  2026R1_adult_asystole.md  2026R1_adult_behavioral.md  2026R1_adult_bradycardia.md  2026R1_adult_burns.md  2026R1_adult_chestpain.md  2026R1_adult_chesttrauma.md  2026R1_adult_chf.md  2026R1_adult_crush.md  2026R1_adult_diabetic.md  2026R1_adult_dialysis.md  2026R1_adult_drowning.md  2026R1_adult_extremitytrauma.md  2026R1_adult_fbao.md  2026R1_adult_headtrauma.md  2026R1_adult_hyperkalemia.md  2026R1_adult_hypertensive.md  2026R1_adult_hyperthermia.md  2026R1_adult_hypothermia.md  2026R1_adult_maxillofacial.md  2026R1_adult_multipletrauma.md  2026R1_adult_nausea.md  2026R1_adult_painmanagement.md  2026R1_adult_postrosc.md  2026R1_adult_resp_medical.md  2026R1_adult_resp_trauma.md  2026R1_adult_rsi.md  2026R1_adult_seizures.md  2026R1_adult_shock.md  2026R1_adult_stroke.md  2026R1_adult_syncope.md  2026R1_adult_tachycardia_narrow.md  2026R1_adult_tachycardia_wide.md  (+48 more)
